--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,23 @@
+body {
+    background-color: #7F6E7F;
+}
+
 canvas {
+  position: relative;
   float: left;
+  left: -10px;
+  top: -10px;
 }
 
 div.sidebar {
+  position: relative;
   float: left;
+  left: -10px;
+  top: -10px;
   padding-left: 25px;
-  /*padding-right: 20px;*/
   width: 200;
+}
+
+div p {
+  font-family: Arial, Helvetica, sans-serif;
 }
